'Normal' Transformation Orientation uses Global Axes #76254

Closed
opened 2020-04-30 09:23:26 +02:00 by Wayne Dixon · 7 comments

System Information
Operating system: Darwin-17.2.0-x86_64-i386-64bit 64 Bits
Graphics card: NVIDIA GeForce GTX 1050 Ti OpenGL Engine NVIDIA Corporation 4.1 NVIDIA-10.27.6 378.10.10.10.20.109

Blender Version
Broken: version: 2.90 (sub 0), branch: master, commit date: 2020-04-30 06:01, hash: a18ad3c3b6
Worked: 2.82a

Short description of error
If you try to use the manipulator in 'normal' orientation, it actually uses the global axes.

Exact steps for others to reproduce the error
Rotate the default cube so the axes don't align with the World axes.
Enable the manipulator is 'Normal' orientation
And then translate along one of its axes
It will translate according to the World axes instead
(same thing occurs with rotation and scale)

normal-orientation-not-correct.mp4

**System Information** Operating system: Darwin-17.2.0-x86_64-i386-64bit 64 Bits Graphics card: NVIDIA GeForce GTX 1050 Ti OpenGL Engine NVIDIA Corporation 4.1 NVIDIA-10.27.6 378.10.10.10.20.109 **Blender Version** Broken: version: 2.90 (sub 0), branch: master, commit date: 2020-04-30 06:01, hash: `a18ad3c3b6` Worked: 2.82a **Short description of error** If you try to use the manipulator in 'normal' orientation, it actually uses the global axes. **Exact steps for others to reproduce the error** Rotate the default cube so the axes don't align with the World axes. Enable the manipulator is 'Normal' orientation And then translate along one of its axes It will translate according to the World axes instead (same thing occurs with rotation and scale) [normal-orientation-not-correct.mp4](https://archive.blender.org/developer/F8502416/normal-orientation-not-correct.mp4)
Author

Added subscriber: @WayneDixon

Added subscriber: @WayneDixon
Contributor

Added subscriber: @dupoxy

Added subscriber: @dupoxy
Contributor

I can confirm
test file:
#76254.blend

I can confirm test file: [#76254.blend](https://archive.blender.org/developer/F8502556/T76254.blend)
Author

Gimbal mode seems to behave oddly too.

Gimbal mode seems to behave oddly too.

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Germano Cavalcante self-assigned this 2020-05-01 14:15:24 +02:00

This issue was referenced by 185e1d5395

This issue was referenced by 185e1d53950faa9b56c812793f2bbda21d7489f8

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
4 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#76254
No description provided.