Fix T76254: 'Normal' Transformation Orientation using Global

Issue introduced in rBc57e4418bb85.