source/blender/editors/transform/transform.c
@@ -828,8 +828,7 @@ static void transform_event_xyz_constraint(TransInfo *t, short key_type, bool is
       if (ELEM(cmode, '\0', axis)) {
         /* Successive presses on existing axis, cycle orientation modes. */
         t->orientation.index = (t->orientation.index + 1) % ARRAY_SIZE(t->orientation.types);
-        BLI_assert(t->orientation.types[0] != V3D_ORIENT_CUSTOM_MATRIX);
-        initTransformOrientation(t->context, t, t->orientation.types[t->orientation.index]);
+        initTransformOrientation(t->context, t);
       }
 
       if (t->orientation.index == 0) {
@@ -1894,10 +1893,7 @@ bool initTransform(bContext *C, TransInfo *t, wmOperator *op, const wmEvent *eve
   unit_m3(t->spacemtx);
 
   initTransInfo(C, t, op, event);
-
-  /* Although `t->orientation.index` can be different from 0, always init the
-   * default orientation so that in redo the contraint uses the `orient_matrix` */
-  initTransformOrientation(C, t, t->orientation.types[0]);
+  initTransformOrientation(C, t);
 
   if (t->spacetype == SPACE_VIEW3D) {
     t->draw_handle_apply = ED_region_draw_cb_activate(
